// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin server adds head meta function to all component instances 1`] = `
Object {
  "style": Array [
    Object {
      "cssText": ".a{width:8px}.b{color:red}",
      "data-fela-rehydration": 2,
      "data-fela-type": "RULE",
      "hid": "rule",
      "type": "text/css",
    },
  ],
}
`;

exports[`Plugin server adds head meta function to all component instances 2`] = `Object {}`;

exports[`Plugin server adds head meta function to all component instances 3`] = `Object {}`;

exports[`Plugin server uses metaTagId and metaKeyName options 1`] = `
Object {
  "style": Array [
    Object {
      "cssText": ".a{width:8px}.b{color:red}",
      "data-fela-rehydration": 2,
      "data-fela-type": "RULE",
      "type": "text/css",
      "vmid": "rule",
    },
  ],
}
`;

exports[`Plugin throws error if a renderer is not passed as an option 1`] = `"[vue-fela] requires a renderer option"`;

exports[`Plugin throws error when install is called more than once 1`] = `"[vue-fela] already installed. Vue.use(VueFela) should only be called once."`;
